mobile responsiveness 90% done footer issues causing page spacing problems

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -59,3 +59,10 @@ width: 11vw;
 .showError{
   display: block;
 }
+
+
+@media screen and (max-width: 400px){
+.small-checkout{
+  font-size: 20px;
+}
+}
